--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: msos
 Type: Package
 Title: Data Sets and Functions Used in Multivariate Statistics: Old School by John Marden
-Version: 1.1.0
-Date: 2017-04-27
+Version: 1.1.1
 Depends: R (>= 3.0.0), mclust, tree
 Authors@R: c(person("John", "Marden", role = c("aut", "cph"),
                     email = "jimarden@illinois.edu"),
 	           person("James", "Balamuta", role = c("cre", "ctb", "com"), 
 	                  email = "james.balamuta@gmail.com"))
-Description: Contains necessary Multivariate Analysis methods and data sets used
+Description: Multivariate Analysis methods and data sets used
     in John Marden's book Multivariate Statistics: Old School (2015) <ISBN:978-1456538835>.
     This is also serves as a companion package for the 
     STAT 571: Multivariate Analysis course at the University of Illinois
     at Urbana-Champaign (UIUC). 
 License: MIT + file LICENSE
-URL: https://github.com/coatless/msos
+URL: https://github.com/coatless/msos, http://istics.net/stat/Multivariate/
 BugReports: https://github.com/coatless/msos/issues
-RoxygenNote: 6.0.1
+RoxygenNote: 7.0.2
+Encoding: UTF-8
