Provide clarity on department...

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,8 @@ Authors@R: c(
 Description: Multivariate Analysis methods and data sets used
     in John Marden's book Multivariate Statistics: Old School (2015) <ISBN:978-1456538835>.
     This also serves as a companion package for the 
-    STAT 571: Multivariate Analysis course at the University of Illinois
-    at Urbana-Champaign (UIUC). 
+    STAT 571: Multivariate Analysis course offered by the Department of Statistics
+    at the University of Illinois at Urbana-Champaign ('UIUC'). 
 License: MIT + file LICENSE
 URL: https://github.com/coatless/msos, http://istics.net/stat/Multivariate/
 BugReports: https://github.com/coatless/msos/issues
