--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Multivariate Analysis methods and data sets used
     This also serves as a companion package for the 
     STAT 571: Multivariate Analysis course offered by the Department of Statistics
     at the University of Illinois at Urbana-Champaign ('UIUC'). 
-URL: https://github.com/coatless/msos, http://istics.net/stat/Multivariate/
+URL: https://github.com/coatless/msos, http://istics.net/stat/Multivariate/, https://coatless.github.io/msos
 BugReports: https://github.com/coatless/msos/issues
 Depends: R (>= 3.0.0), mclust, tree
 License: MIT + file LICENSE
