Fix configuration by removing extraneous period.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -26,7 +26,7 @@ reference:
   - pcbic
   - pcbic.stepwise
   - pcbic.unite
-  - pcbic.subpatterns.
+  - pcbic.subpatterns
 - title: Discrimination
   desc: >
     Approaches to separate known groups in a multivariate sample.
